# local_data_pipeline

./: .gitignore  README.md  pyproject.toml
data/: raw.duckdb  transformed.duckdb  waves.duckdb
dbt/: README.md  dbt_project.yml  profiles.sample.yml  profiles.yml
dbt/models/: sources.yml  wave_data_processed.sql
dbt/models/presentation/: _pres_open_meteo.yml  pres_open_meteo__daily_max_swell.sql
dbt/models/staging/: stg_wave_open_meteo.sql
dbt/models/staging/stg_open_meteo/: _src_open_meteo.yml  stg_open_meteo__swell_data.sql
dbt_reference/models/: wave_data_processed.sql
src/dagster_pipeline/: definitions.py
src/dagster_pipeline/defs/: __init__.py  dbt_defs.py  open_meteo.py  open_meteo_s3.py  schedules.py
