[project]
name = "dagster_pipeline"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.11.12",
    "pandas",
    "requests",
    "duckdb",
    "dbt-duckdb>=1.9.6",
    "dagster-dbt",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_pipeline"
registry_modules = [
    "dagster_pipeline.components.*",
]


